php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29989 --enable mbstring fails on "make" but no configure "error"
Submitted: 2004-09-05 20:35 UTC Modified: 2005-02-21 10:45 UTC
Votes:7
Avg. Score:4.6 ± 0.5
Reproduced:6 of 6 (100.0%)
Same Version:4 (66.7%)
Same OS:2 (33.3%)
From: jesse at eonstreet dot com Assigned: moriyoshi (profile)
Status: Closed Package: mbstring related
PHP Version: 5.0.1 OS: Linx Red Hat Enterprise 3 AS
Private report: No CVE-ID: None
 [2004-09-05 20:35 UTC] jesse at eonstreet dot com
Description:
------------
Hello,
    This bug has been reported on other os and other PHP 5  versions but I feel it is benifical to report it on all versions and os in case one version is patched and the others aren't

I have configured php with 'enable-mbstring' and it configures fine. But upon MAKE it fails.  I am not sure how the exif and mbstring extensions are related but they complied fine whith 4.3.8.

I have downloaded the most recent "snapshot" from sept 5 and copied the files for exif and mbstring but I receive the same error.

gcc  -Iext/exif/ -I/root/php-5.0.1/ext/exif/ -DPHP_ATOM_INC -I/root/php-5.0.1/include -I/root/php-5.0.1/main -I/root/php-5.0.1 -I/root/php-5.0.1/Zend -I/usr/include/libxml2 -I/usr/kerberos/include -I/usr/include/freetype2 -I/usr/include/imap -I/root/php-5.0.1/ext/mbstring/oniguruma -I/root/php-5.0.1/ext/mbstring/libmbfl -I/root/php-5.0.1/ext/mbstring/libmbfl/mbfl -I/usr/include/mysql -I/usr/include/ncurses -I/usr/include/pspell  -I/root/php-5.0.1/TSRM  -g -O2  -c /root/php-5.0.1/ext/exif/exif.c -o ext/exif/exif.o  && echo > ext/exif/exif.lo
In file included from /root/php-5.0.1/ext/mbstring/php_mbregex.h:28,
                 from /root/php-5.0.1/ext/mbstring/mbstring.h:77,
                 from /root/php-5.0.1/ext/exif/exif.c:76:
/root/php-5.0.1/ext/mbstring/oniguruma/oniguruma.h:573: redefinition of `struct re_registers'
make: *** [ext/exif/exif.lo] Error 1




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-09-06 08:24 UTC] derick@php.net
Moriyoshi, any clue about this one? It works fine for me.
 [2004-09-22 09:50 UTC] cameron at teragen dot com dot au
I believe this is Red Hat specific, I had one of our programmers help me track this down and found that 'struct re_registers' can also be found in /usr/include/regex.h (checked on Red Hat 7.3, 9 and Fedora Core 1 & 2). Under Fedora Core 2 if the following is commented out of /usr/include/regex.h, I can successfully build PHP 5.0.1 rpms.

/* This is the structure we store register match data in.  See
   regex.texinfo for a full description of what registers match.  */
struct re_registers
{
  unsigned num_regs;
  regoff_t *start;
  regoff_t *end;
};
 [2004-10-05 02:53 UTC] vinko at cprsig dot cl
Mandrake 10.0 has the same problem, too.
 [2004-10-15 21:49 UTC] gene_wood at example dot com
This manifests on Redhat Fedora Core 2. 
It's still happening in php-5.0.2.

The workaround described here of commenting out "struct re_registers" from "/usr/include/regex.h" worked for me.
 [2004-10-19 02:11 UTC] gene_wood at example dot com
I've now seen this manifest on Redhat Enterprise Linux 3
I'll try the fix proposed for Fedora Core 2
 [2005-02-21 10:45 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC