- Fix bug #29989 (type re_registers redefined in oniguruma.h)