ext/mbstring/oniguruma/php_onig_compat.h
@@ -3,5 +3,6 @@
 
 #define re_pattern_buffer           php_mb_re_pattern_buffer
 #define regex_t                     php_mb_regex_t
+#define re_registers                php_mb_re_registers
 
 #endif /* _PHP_MBREGEX_COMPAT_H */
